[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/NodeRedBarrel.gd" type="Script" id=1]
[ext_resource path="res://media/used/barrel_green_full.png" type="Texture" id=2]
[ext_resource path="res://media/used/barrel_green_top.png" type="Texture" id=3]
[ext_resource path="res://media/used/barrel_red_full.png" type="Texture" id=4]
[ext_resource path="res://media/used/barrel_red_top.png" type="Texture" id=5]
[ext_resource path="res://media/used/barrel_yellow_full.png" type="Texture" id=6]
[ext_resource path="res://media/used/barrel_yellow_top.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 6, 2.16667 )

[node name="NodeBarrel" type="RigidBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
mode = 0
mass = 10.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
barrel_color = null

[node name="barrel_green_sprite" type="Sprite" parent="." index="0" groups=[
"barrel_sprite",
]]

editor/display_folded = true
visible = false
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="barrel_green_top" type="Sprite" parent="barrel_green_sprite" index="0"]

z_index = 1
texture = ExtResource( 3 )
_sections_unfolded = [ "Z Index" ]

[node name="barrel_red_sprite" type="Sprite" parent="." index="1" groups=[
"barrel_sprite",
]]

editor/display_folded = true
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="barrel_red_top" type="Sprite" parent="barrel_red_sprite" index="0"]

position = Vector2( 0, -2 )
z_index = 1
texture = ExtResource( 5 )
_sections_unfolded = [ "Z Index" ]

[node name="barrel_yellow_sprite" type="Sprite" parent="." index="2" groups=[
"barrel_sprite",
]]

editor/display_folded = true
visible = false
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="barrel_yellow_top" type="Sprite" parent="barrel_yellow_sprite" index="0"]

z_index = 1
texture = ExtResource( 7 )
_sections_unfolded = [ "Z Index" ]

[node name="base_collider" type="CollisionShape2D" parent="." index="3"]

visible = false
position = Vector2( 0.499998, 22.5 )
scale = Vector2( 2.65385, 1.73077 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="left_top_collider" type="CollisionShape2D" parent="." index="4"]

visible = false
position = Vector2( -25, -16 )
scale = Vector2( 0.0865385, 2 )
shape = SubResource( 2 )

[node name="right_top_collider" type="CollisionShape2D" parent="." index="5"]

visible = false
position = Vector2( 25.25, -16 )
scale = Vector2( 0.0961538, 2 )
shape = SubResource( 2 )

[node name="success_area" type="Area2D" parent="." index="6"]

visible = false
scale = Vector2( 2, 2 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D4" type="CollisionShape2D" parent="success_area" index="0"]

scale = Vector2( 2, 1.15385 )
shape = SubResource( 3 )


